tools/analysis/test/cluster/ingress-lb-limit/cluster-dump/ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-5c6887754-scfb8/logs.txt
# Copyright (c) 2021, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

==== START logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-5c6887754-scfb8 ====
Environment:
------------
ENVOY_PORT=
INBOUND_CAPTURE_PORT=
ISTIO_INBOUND_INTERCEPTION_MODE=
ISTIO_INBOUND_TPROXY_MARK=
ISTIO_INBOUND_TPROXY_ROUTE_TABLE=
ISTIO_INBOUND_PORTS=
ISTIO_OUTBOUND_PORTS=
ISTIO_LOCAL_EXCLUDE_PORTS=
ISTIO_SERVICE_CIDR=
ISTIO_SERVICE_EXCLUDE_CIDR=

Variables:
----------
PROXY_PORT=15001
PROXY_INBOUND_CAPTURE_PORT=15006
PROXY_TUNNEL_PORT=15008
PROXY_UID=1337
PROXY_GID=1337
INBOUND_INTERCEPTION_MODE=REDIRECT
INBOUND_TPROXY_MARK=1337
INBOUND_TPROXY_ROUTE_TABLE=133
INBOUND_PORTS_INCLUDE=*
INBOUND_PORTS_EXCLUDE=15090,15021,15020
OUTBOUND_IP_RANGES_INCLUDE=*
OUTBOUND_IP_RANGES_EXCLUDE=
OUTBOUND_PORTS_INCLUDE=
OUTBOUND_PORTS_EXCLUDE=
KUBEVIRT_INTERFACES=
ENABLE_INBOUND_IPV6=false

Writing following contents to rules file:  /tmp/iptables-rules-1628150710242149339.txt281718764
* nat
-N ISTIO_INBOUND
-N ISTIO_REDIRECT
-N ISTIO_IN_REDIRECT
-N ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp --dport 15008 -j RETURN
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A ISTIO_INBOUND -p tcp --dport 22 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_OUTPUT -o lo -s 127.0.0.6/32 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d 127.0.0.1/32 -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d 127.0.0.1/32 -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d 127.0.0.1/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
COMMIT

iptables-restore --noflush /tmp/iptables-rules-1628150710242149339.txt281718764
Writing following contents to rules file:  /tmp/ip6tables-rules-1628150710344903576.txt115206747

ip6tables-restore --noflush /tmp/ip6tables-rules-1628150710344903576.txt115206747
iptables-save 
# Generated by iptables-save v1.8.4 on Thu Aug  5 08:05:10 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:ISTIO_INBOUND - [0:0]
:ISTIO_REDIRECT - [0:0]
:ISTIO_IN_REDIRECT - [0:0]
:ISTIO_OUTPUT - [0:0]
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp -m tcp --dport 15008 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 22 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A ISTIO_OUTPUT -s 127.0.0.6/32 -o lo -j RETURN
-A ISTIO_OUTPUT ! -d 127.0.0.1/32 -o lo -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT ! -d 127.0.0.1/32 -o lo -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d 127.0.0.1/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
COMMIT
# Completed on Thu Aug  5 08:05:10 2021
==== END logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-5c6887754-scfb8 ====
==== START logs for container ingress-nginx-default-backend of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-5c6887754-scfb8 ====
==== END logs for container ingress-nginx-default-backend of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-5c6887754-scfb8 ====
==== START logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-5c6887754-scfb8 ====
2021-08-05T08:05:36.588469Z	info	FLAG: --concurrency="2"
2021-08-05T08:05:36.588517Z	info	FLAG: --disableInternalTelemetry="false"
2021-08-05T08:05:36.588528Z	info	FLAG: --domain="ingress-nginx.svc.cluster.local"
2021-08-05T08:05:36.588533Z	info	FLAG: --help="false"
2021-08-05T08:05:36.588537Z	info	FLAG: --id=""
2021-08-05T08:05:36.588541Z	info	FLAG: --ip=""
2021-08-05T08:05:36.588546Z	info	FLAG: --log_as_json="false"
2021-08-05T08:05:36.588550Z	info	FLAG: --log_caller=""
2021-08-05T08:05:36.588555Z	info	FLAG: --log_output_level="default:info"
2021-08-05T08:05:36.588559Z	info	FLAG: --log_rotate=""
2021-08-05T08:05:36.588564Z	info	FLAG: --log_rotate_max_age="30"
2021-08-05T08:05:36.588569Z	info	FLAG: --log_rotate_max_backups="1000"
2021-08-05T08:05:36.588573Z	info	FLAG: --log_rotate_max_size="104857600"
2021-08-05T08:05:36.588578Z	info	FLAG: --log_stacktrace_level="default:none"
2021-08-05T08:05:36.588586Z	info	FLAG: --log_target="[stdout]"
2021-08-05T08:05:36.588591Z	info	FLAG: --meshConfig="./etc/istio/config/mesh"
2021-08-05T08:05:36.588596Z	info	FLAG: --mixerIdentity=""
2021-08-05T08:05:36.588601Z	info	FLAG: --outlierLogPath=""
2021-08-05T08:05:36.588607Z	info	FLAG: --proxyComponentLogLevel="misc:error"
2021-08-05T08:05:36.588612Z	info	FLAG: --proxyLogLevel="warning"
2021-08-05T08:05:36.588618Z	info	FLAG: --serviceCluster="ingress-controller-ingress-nginx-defaultbackend.ingress-nginx"
2021-08-05T08:05:36.588623Z	info	FLAG: --serviceregistry="Kubernetes"
2021-08-05T08:05:36.588628Z	info	FLAG: --stsPort="0"
2021-08-05T08:05:36.588632Z	info	FLAG: --templateFile=""
2021-08-05T08:05:36.588637Z	info	FLAG: --tokenManagerPlugin="GoogleTokenExchange"
2021-08-05T08:05:36.588642Z	info	FLAG: --trust-domain="cluster.local"
2021-08-05T08:05:36.588675Z	info	Version 1.7.3-16752a61bc5f95e8fa8c1e439d2c7271c54fa5a1-dirty-Modified
2021-08-05T08:05:36.589009Z	info	Obtained private IP [10.244.1.134 fe80::242f:57ff:feff:8fbd]
2021-08-05T08:05:36.589181Z	info	Apply proxy config from env {"proxyMetadata":{"DNS_AGENT":""}}

2021-08-05T08:05:36.590290Z	info	Effective config: binaryPath: /usr/local/bin/envoy
concurrency: 2
configPath: ./etc/istio/proxy
controlPlaneAuthPolicy: MUTUAL_TLS
discoveryAddress: istiod.istio-system.svc:15012
drainDuration: 45s
envoyAccessLogService: {}
envoyMetricsService: {}
parentShutdownDuration: 60s
proxyAdminPort: 15000
proxyMetadata:
  DNS_AGENT: ""
serviceCluster: ingress-controller-ingress-nginx-defaultbackend.ingress-nginx
statNameLength: 189
statusPort: 15020
terminationDrainDuration: 5s
tracing:
  zipkin:
    address: zipkin.istio-system:9411

2021-08-05T08:05:36.590391Z	info	Proxy role: &model.Proxy{Type:"sidecar", IPAddresses:[]string{"10.244.1.134", "fe80::242f:57ff:feff:8fbd"}, ID:"ingress-controller-ingress-nginx-defaultbackend-5c6887754-scfb8.ingress-nginx", Locality:(*envoy_config_core_v3.Locality)(nil), DNSDomain:"ingress-nginx.svc.cluster.local", ConfigNamespace:"", Metadata:(*model.NodeMetadata)(nil), SidecarScope:(*model.SidecarScope)(nil), PrevSidecarScope:(*model.SidecarScope)(nil), MergedGateway:(*model.MergedGateway)(ni [...]
2021-08-05T08:05:36.590400Z	info	JWT policy is third-party-jwt
2021-08-05T08:05:36.590437Z	info	PilotSAN []string{"istiod.istio-system.svc"}
2021-08-05T08:05:36.590458Z	info	MixerSAN []string{"spiffe://cluster.local/ns/istio-system/sa/istio-mixer-service-account"}
2021-08-05T08:05:36.590502Z	info	sa.serverOptions.CAEndpoint == istiod.istio-system.svc:15012
2021-08-05T08:05:36.590529Z	info	Using user-configured CA istiod.istio-system.svc:15012
2021-08-05T08:05:36.590536Z	info	istiod uses self-issued certificate
2021-08-05T08:05:36.590583Z	info	the CA cert of istiod is: -----BEGIN CERTIFICATE-----
MIIFeDCCA2CgAwIBAgIJAKjClE3fE5vSMA0GCSqGSIb3DQEBCwUAMEkxCzAJBgNV
[...]
4hGRnrOMyx6JXuGQ
-----END CERTIFICATE-----

2021-08-05T08:05:36.617967Z	info	sds	SDS gRPC server for workload UDS starts, listening on "./etc/istio/proxy/SDS" 

2021-08-05T08:05:36.618095Z	info	sds	Start SDS grpc server
2021-08-05T08:05:36.618150Z	info	Starting proxy agent
2021-08-05T08:05:36.618198Z	info	Opening status port 15020

2021-08-05T08:05:36.618264Z	info	Received new config, creating new Envoy epoch 0
2021-08-05T08:05:36.618415Z	info	Epoch 0 starting
2021-08-05T08:05:36.622628Z	info	Envoy command: [-c etc/istio/proxy/envoy-rev0.json --restart-epoch 0 --drain-time-s 45 --parent-shutdown-time-s 60 --service-cluster ingress-controller-ingress-nginx-defaultbackend.ingress-nginx --service-node sidecar~10.244.1.134~ingress-controller-ingress-nginx-defaultbackend-5c6887754-scfb8.ingress-nginx~ingress-nginx.svc.cluster.local --local-address-ip-version v4 --log-format-prefix-with-location 0 --log-format %Y-%m-%dT%T.%fZ	%l	envoy %n	%v -l warning --com [...]
2021-08-05T08:05:37.219453Z	warning	envoy runtime	Unable to use runtime singleton for feature envoy.reloadable_features.activate_fds_next_event_loop
2021-08-05T08:05:37.505852Z	warning	envoy config	StreamAggregatedResources gRPC config stream closed: 14, no healthy upstream
2021-08-05T08:05:37.505928Z	warning	envoy config	Unable to establish new stream
2021-08-05T08:05:37.580246Z	warning	envoy config	StreamAggregatedResources gRPC config stream closed: 14, no healthy upstream
2021-08-05T08:05:37.580345Z	warning	envoy config	Unable to establish new stream
2021-08-05T08:05:37.582189Z	info	sds	resource:default new connection
2021-08-05T08:05:37.582282Z	info	sds	Skipping waiting for gateway secret
2021-08-05T08:05:37.655984Z	warning	envoy config	StreamAggregatedResources gRPC config stream closed: 14, no healthy upstream
2021-08-05T08:05:37.656220Z	warning	envoy config	Unable to establish new stream
2021-08-05T08:05:37.683983Z	info	cache	Root cert has changed, start rotating root cert for SDS clients
2021-08-05T08:05:37.684023Z	info	cache	GenerateSecret default
2021-08-05T08:05:37.684475Z	info	sds	resource:default pushed key/cert pair to proxy
2021-08-05T08:05:37.701425Z	warning	envoy main	there is no configured limit to the number of allowed active connections. Set a limit via the runtime key overload.global_downstream_max_connections
2021-08-05T08:05:38.785298Z	info	sds	resource:ROOTCA new connection
2021-08-05T08:05:38.785461Z	info	sds	Skipping waiting for gateway secret
2021-08-05T08:05:38.785553Z	info	cache	Loaded root cert from certificate ROOTCA
2021-08-05T08:05:38.785714Z	info	sds	resource:ROOTCA pushed root cert to proxy
2021-08-05T08:05:40.461804Z	info	Envoy proxy is ready
==== END logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-5c6887754-scfb8 ====
